--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,5 @@
 @import url(fonts/clear-sans.css);
+@import url(fonts/bravura.css);
 html, body {
   margin: 0;
   padding: 0;
@@ -231,7 +232,8 @@ hr {
 .tile, .tile .tile-inner {
   width: 107px;
   height: 107px;
-  line-height: 116.25px; }
+  line-height: 156.25px; 
+  font-family: "Bravura"; }
 .tile.tile-position-1-1 {
   -webkit-transform: translate(0px, 0px);
   -moz-transform: translate(0px, 0px);
@@ -311,7 +313,7 @@ hr {
     text-align: center;
     font-weight: bold;
     z-index: 10;
-    font-size: 55px; }
+    font-size: 45px; }
   .tile.tile-2 .tile-inner {
     background: #eee4da;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
