--- a/style/main.scss
+++ b/style/main.scss
@@ -1,5 +1,6 @@
 @import "helpers";
 @import "fonts/clear-sans.css";
+@import "fonts/bravura.css";
 
 $field-width: 500px;
 $grid-spacing: 15px;
@@ -292,7 +293,8 @@ hr {
     &, .tile-inner {
       width: ceil($tile-size);
       height: ceil($tile-size);
-      line-height: $tile-size + 10px;
+      line-height: $tile-size + 50px;
+      font-family: "Bravura";
     }
 
     // Build position classes
@@ -322,7 +324,7 @@ hr {
     font-weight: bold;
     z-index: 10;
 
-    font-size: 55px;
+    font-size: 45px;
   }
 
   // Movement transition
